update propterites and  cors